Wed Dec 19 16:48:41 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], gnome-run.c, launcher.c, menu-properties.c,
	  panel-config.c: remove the raise function and just replace
	  it with gtk_window_present, remove some other cruft left around

	* menu.c: don't prepend home dir to distro menu paths, these
	  are uris now

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* panel-global-config.schemas:

	Change default values for show delay to 300
	and hide delay to 500.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* gnome-panel-properties.c: (load_config_into_gui):
	* gnome-panel-properties.glade:
	* gnome-panel-properties.glade.h:

	Remove "show delay" and "hide delay" options from global
	panel config. Leave them in GConf.
	
2001-12-19  Glynn Foster  <glynn.foster@sun.com>

	* session.c: Saving is fucked. Patch to at least have 
	a non-b0rked panel.

2001-12-19  Glynn Foster  <glynn.foster@sun.com>

	* main.c, menu.c, panel-applet-frame.c, panel-gconf.c,
	* panel-gconf.h, session.c, session.h:

	Move the get and set methods for the profiles to session where 
	they probably belong. Start saving the panel config per profile.
	It's like totally buggy right now, but it's sort of getting there.
	Panels crash because of lack of schema.

2001-12-19  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add panel-main.h.

	* panel-main.h: new file.

	* main.c: (panel_main_get_current_profile): impl.
	  make panel_profile_name static.

	* panel-applet-frame.c: (panel_applet_frame_construct): append
	the prefs_key item to the iid to make the moniker.

	* menu.c: (create_new_panel): use panel_main_get_current_profile.

	* session.c: (session_init_panels): ditto.

2001-12-19  Glynn Foster  <glynn.foster@sun.com>

	* aligned-widget.c, aligned-widget.h, applet-object.c, applet-widget.c,
	* basep-widget.c, basep-widget.h, border-widget.c, border-widget.h,
	* drawer-widget.c, drawer-widget.h, edge-widget.c, edge-widget.h,